add: essentials (for pagination, media, apperror, bcrypt, admin permissions,  and constants)
